test_compiler/errors/e31.gm
Proc foo(G:Graph)
{
    //Foreach(t:G.Nodes)
    For(t:G.Nodes)
    {
        Return;  // should be an error
    }
} 
